--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,13 @@
   "builds": [
     {
       "src": "./app.js",
-      "use": "@vercel/node-server"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/.*",
-      "dest": "server.js"
+      "dest": "app.js"
     }
   ]
 }
