--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "Shaswata",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.567.0",
+    "@aws-sdk/s3-request-presigner": "^3.567.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -20,6 +22,7 @@
     "mongoose": "^8.3.0",
     "mongoose-unique-validator": "^5.0.0",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.3",
     "stripe": "^15.3.0",
     "uuid": "^9.0.1"
   },
