--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.3.0",
     "mongoose-unique-validator": "^5.0.0",
     "multer": "^1.4.5-lts.1",
+    "postmark": "^4.0.2",
     "sharp": "^0.33.3",
     "stripe": "^15.3.0",
     "uuid": "^9.0.1"
